update docker, postman and documentation
